# Masterthesis

./: .gitignore  AUTHORS  ChangeLog  INSTALL  KEDB  LICENSE  LICENSE_WITH_BOOST  Makefile.am  NEWS  README  bootstrap.sh  configure-debug-macOS.sh  configure-parallel-macOS.sh  configure-serial-macOS.sh  configure-taurus.sh  configure.ac  configure_to_develop.ac  configure_to_distribute.ac
doc/: Doxyfile.in  Makefile.am
examples/: Makefile.am  Makefile_to_develop.am  Makefile_to_distribute.am
examples/EMFDTD/: CPMLParams.hpp  EMFDTD.hpp  Makefile.am  RUN.sh.in  TESTMATRIX_RUN.sh.in  conversion.hpp  physical_constants.hpp  simulate.cpp  testcase_normal.ini  testcase_small.ini
examples/EMFDTD/geometry/: IndicatorEllipsoid.hpp
examples/EMFDTD/sources/: ModulatedGaussianSource.hpp
examples/EMFDTD/stencils/: CompleteCPMLCurlStencil.hpp
examples/HeatEqnFDM/: HeatEqnFDM.hpp  Makefile_to_develop.am  Makefile_to_distribute.am  main.cpp
examples/HeatEqnFDM/petsc/: createPlotfile.py
examples/HeatEqnFDM/results/: README
examples/HeatEqnFDMConfigFile/: Makefile.am  Makefile_to_develop.am  Makefile_to_distribute.am  RUN.sh.in  analyticalFunctions.hpp  main.cpp
examples/HeatEqnFDMInitFile/: HeatEqnFDM.hpp  HeatEqnFDMInitFile.hpp  Makefile.am  Makefile_to_develop.am  Makefile_to_distribute.am  RUN.sh.in  RUN_1D.sh.in  RUN_2D.sh.in  RUN_3D.sh.in  main1D.cpp  main2D.cpp  main3D.cpp
examples/LameNavierEqnFDM/: LameNavierEqnFDM.hpp  Makefile.am  Makefile_to_distribute.am  main.cpp
examples/LameNavierEqnFDMFirstOrder/: LameNavierEqnFDMFirstOrder.hpp  Makefile.am  Makefile_to_distribute.am  RUN.sh.in  TESTMATRIX_RUN.sh.in  main.cpp
examples/MRIDataPBHEqnFDM/: MRIDataPBHEqnFDM.hpp  Makefile.am  Makefile_to_develop.am  Makefile_to_distribute.am  Parameters.ini.in  RUN_HELPER.sh.in  Template.ini.in  calcDiff.py  checkResults.py  helperFunctions.py  main3D.cpp  plotMCMCResults.py  plotSurface.py  postProcessing.py  readMRIData.py  readMRIVolume.py  startMCMCFit.py  startMCMCFit_Tblood.py  startMCMCFit_h.py  startMCMCFit_lambda.py  startMCMCFit_omega.py  startMCMCFit_q.py  startMCMCFit_rhoc.py  startMCMCFit_vessels.py  startSimulation.py
examples/MaxwellEqnsFDTD/: Makefile.am  Makefile_to_distribute.am  Problem_MaxwellEqnsFDTD.hpp  RUN.sh  main.cpp
examples/TumorHeatEqnFDM/: Bousselham.ini.in  Makefile.am  Makefile_to_develop.am  Makefile_to_distribute.am  Parameters.ini.in  RUN.sh.in  RUN_HELPER.sh.in  RUN_SCALINGTEST_HELPER.sh.in  RUN_SCALINGTEST_HYBRID.sh.in  RUN_SCALINGTEST_HYBRID_1.sh.in  RUN_SCALINGTEST_HYBRID_2.sh.in  RUN_SCALINGTEST_MPI.sh.in  RUN_SCALINGTEST_OPENMP.sh.in  RUN_WEAK_SCALINGTEST_HELPER.sh.in  RUN_WEAK_SCALINGTEST_HYBRID.sh.in  RUN_WEAK_SCALINGTEST_MPI.sh.in  RUN_WEAK_SCALINGTEST_OPENMP.sh.in  TumorHeatEqnFDM.hpp  calcDiff.py  checkConvergence.py  checkResults.py  getSurface.py  main.cpp  main1D.cpp  main2D.cpp  main3D.cpp  plotScalingtest.py  plotSurface.plt.in  plotSurface.py  plotSurface.sh.in  startSimulation.py  weakScaling.py
examples/TumorHeatEqnFDM/cases/: Bousselham-Figure-5A.ini.in  Bousselham-Figure-5B.ini.in  Bousselham-Figure-5C.ini.in  Bousselham-Figure-7A.ini.in  Bousselham-Figure-7C.ini.in
examples/TumorHeatEqnFDM/cases/Bousselham/: Figure-5A.ini.in  Figure-5B.ini.in  Figure-5C.ini.in  Figure-7A.ini.in  Figure-7C.ini.in
examples/TumorHeatEqnFDM/cases/ScalingTest/: 5A_120x120x10.ini.in  5A_120x120x100.ini.in  5A_120x120x50.ini.in  5A_240x240x10.ini.in  5A_240x240x100.ini.in  5A_240x240x50.ini.in  5A_480x480x192.ini.in  7C_120x120x10.ini.in  7C_120x120x100.ini.in  7C_120x120x50.ini.in  7C_240x240x10.ini.in  7C_240x240x100.ini.in  7C_240x240x50.ini.in  7C_480x480x192.ini.in
examples/TumorHeatEqnFDM/cases/Thermography/: 5A_120x120x100.ini.in  5A_120x120x50.ini.in  5A_240x240x100.ini.in  5A_240x240x192.ini.in  7C_120x120x100.ini.in  7C_240x240x100.ini.in  7C_240x240x192.ini.in  7C_240x240x50.ini.in
examples/TumorHeatEqnFDM/cases/scalingtest/: 5A_120x120x10.ini.in  (+4 more)
examples/TumorHeatEqnFDM/petsc/: Makefile
examples/TumorHeatEqnFDM/results/: ZIH_TAURUS-scaling_weak.plt  scafes-scalingtests.plt
examples/WaveEqnFDM/: Makefile_to_develop.am  Makefile_to_distribute.am  WaveEqnFDM.hpp  main.cpp
examples/ZhangExampleFDM/: Makefile.am  Makefile_to_distribute.am  RUN.sh.in  TESTMATRIX_RUN.sh.in  ZhangExampleFDM.hpp  main.cpp
examples/ZhangExampleFDM/petsc/: README
examples/ZhangExampleFDM/results/: ZIH_TAURUS-scaling_strong.plt
tests/system/HeatEqnFDM/: HeatEqnFDM.hpp  Makefile.am  Makefile_to_develop.am  Makefile_to_distribute.am  RUN.sh.in  RUN_3D_CONSTANT_CAUCHY.sh.in  RUN_3D_CONSTANT_DIRICHLET.sh.in  RUN_3D_CONSTANT_NEUMANN.sh.in  RUN_3D_LINEAR_CAUCHY.sh.in  RUN_3D_LINEAR_DIRICHLET.sh.in  RUN_3D_LINEAR_NEUMANN.sh.in  RUN_ALL_TESTS.sh.in  analyticalFunctions.hpp  analyticalSolutions.hpp  boundaryConditions.hpp  main.cpp  main3DConstantCauchy.cpp  main3DConstantDirichlet.cpp  main3DConstantNeumann.cpp  main3DLinearCauchy.cpp  main3DLinearDirichlet.cpp  main3DLinearNeumann.cpp  testAnalyticalSolutions.cpp
tests/system/HeatEqnFdmStencilWidthOne/: HeatEqnFdmStencilWidthOne.hpp  Makefile.am  Makefile_to_distribute.am  RUN.sh.in  TESTMATRIX_RUN.sh.in  TESTMATRIX_RUN_1D.sh.in  TESTMATRIX_RUN_2D.sh.in  TESTMATRIX_RUN_3D.sh.in  main1D.cpp  main2D.cpp  main3D.cpp
tests/system/PennesBioheatEqnFDM/: Makefile.am  Makefile_to_develop.am  Makefile_to_distribute.am  PennesBioheatEqnFDM.hpp  RUN.sh.in  RUN_ALL_TESTS.sh.in  boundaryConditions.hpp  main.cpp  main3DConstantDirichlet.cpp  main3DLinearDirichlet.cpp
tests/unit/: Makefile.am  ScaFES_BufferTest.cpp  ScaFES_BufferTest.hpp  ScaFES_DataFieldTest.cpp  ScaFES_DataFieldTest.hpp  ScaFES_GridGlobalTest.cpp  ScaFES_GridGlobalTest.hpp  ScaFES_GridSubTest.cpp  ScaFES_GridSubTest.hpp  ScaFES_GridTest.cpp  ScaFES_GridTest.hpp  ScaFES_GridTest1D.cpp  ScaFES_GridTest1D.hpp  ScaFES_GridTest2D.cpp  ScaFES_GridTest2D.hpp  ScaFES_NtupleMainTest.cpp  ScaFES_NtupleTest.cpp  ScaFES_NtupleTest.hpp  ScaFES_ParametersTest.cpp  ScaFES_ParametersTest.hpp  ScaFES_VectorSpaceTest.hpp  ScaFES_mainTest.cpp
(+344 files in other folders)
