SUBDIRS =
SUBDIRS += HeatEqnFDM
SUBDIRS += WaveEqnFDM
SUBDIRS += LameNavierEqnFDM
SUBDIRS += LameNavierEqnFDMFirstOrder
SUBDIRS += TumorHeatEqnFDM
SUBDIRS += ZhangExampleFDM
SUBDIRS += HeatEqnFDMInitFile
SUBDIRS += MRIDataPBHEqnFDM

if AMHAVEBOOST
if AMHAVEBOOSTMPI
if AMHAVEADOLC
#SUBDIRS += EMFDTD
endif
endif
endif
