SUBDIRS = \
          Dirichlet \
          HeatEqnFdmTimeLinSpaceLinNeumann \
          HeatEqnFdmTimeLinSpaceLinCauchy \
          HeatEqnFdmTimeLinSpaceConstNeumann \
          HeatEqnFdmTimeLinSpaceConstCauchy

################################################################################
include_HEADERS= HeatEqnFDM.hpp
include_HEADERS+= analyticalFunctions.hpp
noinst_PROGRAMS=
EXTRA_DIST=
