SUBDIRS = \
          Dirichlet \
          Neumann \
          HeatEqnFdmTimeLinSpaceLinNeumann \
          HeatEqnFdmTimeLinSpaceLinCauchy \
          HeatEqnFdmTimeLinSpaceConstCauchy

################################################################################
include_HEADERS= HeatEqnFDM.hpp
include_HEADERS+= analyticalFunctions.hpp
noinst_PROGRAMS=
EXTRA_DIST=
