SUBDIRS = \
          Cauchy \
          Dirichlet \
          Neumann \
          HeatEqnFdmTimeLinSpaceLinCauchy

################################################################################
include_HEADERS= HeatEqnFDM.hpp
include_HEADERS+= analyticalFunctions.hpp
noinst_PROGRAMS=
EXTRA_DIST=
